# GainKnob_Example_VST

./: CMakeLists.txt
resource/: myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
